[tool.poetry]
name = "mediamanager"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages= [{include = "media_manager"}]

[tool.poetry.scripts]
suitik_media_manager = "media_manager.main:run"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.8"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
