[tool.poetry]
name = "suitikdispatcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{include = "suitik_dispatcher"}]

[tool.poetry.scripts]
suitik_dispatcher = "suitik_dispatcher.main:run"

[tool.poetry.dependencies]
python = "^3.7"
evdev = "^1.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
